Edit to webpack UMD

--- a/examples/index.html
+++ b/examples/index.html
@@ -11,7 +11,12 @@
     <script src="../dist/spotifyAPI.umd.js"></script>
 
     <script>
-      const albums = spotifyAPI.searchAlbums('vintage')
+      const spotify = new spotifyAPI({
+        token:
+          'BQAypnkKhcbkG2kb9pHWX3WLkws_QBJR0AwpVCHGec37oXYswpdm0CDxCbDPoPwSHsV40dnutr1_DH-IffsrF9CiRSeaCg2BHtz8KJ8-7Sr6Gmb7XSedgbc_01HMkIHaIiQXnDok555863dYObPKMjESl_c4ZIJozDg6Vna6bA_tTjzh6KdogNbAJZYUFUUnwjH27Q'
+      })
+      const albums = spotify.search.albums('tiesto')
+
       const albumsEl = document.getElementById('albums')
 
       albums.then(data => {
